--- a/apps/cloudflared/base/kustomization.yaml
+++ b/apps/cloudflared/base/kustomization.yaml
@@ -56,6 +56,6 @@ data:
     metrics: 0.0.0.0:2000
     no-autoupdate: true
     ingress:
-    - hostname: "*.linuxcloudhacks.ovh"
+    - hostname: "*.bolacha.dev"
       service: http://traefik.kube-system.svc.cluster.local:80
     - service: http_status:404
