--- a/bootstrap/traefik-app.yaml
+++ b/bootstrap/traefik-app.yaml
@@ -11,7 +11,7 @@ spec:
   source:
     repoURL: https://traefik.github.io/charts
     chart: traefik
-    targetRevision: 24.0.0
+    targetRevision: HEAD
     helm:
       values: |
         ingressClass:
