--- a/apps/traefik/helmrelease.yaml
+++ b/apps/traefik/helmrelease.yaml
@@ -1,20 +1,25 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
+apiVersion: argoproj.io/v1alpha1
+kind: Application
 metadata:
   name: traefik
-  namespace: traefik
+  namespace: argocd
 spec:
-  chart:
-    spec:
-      chart: traefik
-      version: "24.0.0"
-      sourceRef:
-        kind: HelmRepository
-        name: traefik
-        namespace: flux-system
-  values:
-    ingressClass:
-      enabled: true
-      isDefaultClass: true
-    service:
-      type: LoadBalancer
+  project: default
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: traefik
+  source:
+    repoURL: https://helm.traefik.io/traefik
+    chart: traefik
+    targetRevision: "37.0.0"
+    helm:
+      values: |
+        ingressClass:
+          enabled: true
+          isDefaultClass: true
+        service:
+          type: LoadBalancer
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
