--- a/apps/traefik/helmrelease.yaml
+++ b/apps/traefik/helmrelease.yaml
@@ -13,12 +13,8 @@ spec:
     chart: traefik
     targetRevision: "37.0.0"
     helm:
-      values: |
-        ingressClass:
-          enabled: true
-          isDefaultClass: true
-        service:
-          type: LoadBalancer
+      valueFiles:
+        - values.yaml
   syncPolicy:
     automated:
       prune: true
