--- a/apps/traefik/base/helmrelease.yaml
+++ b/apps/traefik/base/helmrelease.yaml
@@ -13,8 +13,12 @@ spec:
     chart: traefik
     targetRevision: 37.0.0
     helm:
-      valueFiles:
-        - values.yaml
+      values: |
+        ingressClass:
+          enabled: true
+          isDefaultClass: true
+        service:
+          type: NodePort
   syncPolicy:
     automated:
       prune: true
