--- a/apps/traefik/base/helmrelease.yaml
+++ b/apps/traefik/base/helmrelease.yaml
@@ -14,7 +14,7 @@ spec:
     targetRevision: 37.0.0
     helm:
       valueFiles:
-        - apps/traefik/base/values.yaml
+        - values.yaml
   syncPolicy:
     automated:
       prune: true
