--- a/apps/traefik/base/helmrelease.yaml
+++ b/apps/traefik/base/helmrelease.yaml
@@ -11,10 +11,22 @@ spec:
   source:
     repoURL: https://helm.traefik.io/traefik
     chart: traefik
-    targetRevision: 37.0.0
+    targetRevision: 27.0.0
     helm:
-      valueFiles:
-        - values.yaml
+      values: |
+        service:
+          type: NodePort
+        ingressClass:
+          enabled: true
+          isDefaultClass: true
+        logs:
+          general:
+            level: INFO
+          access:
+            enabled: true
+        metrics:
+          prometheus:
+            enabled: true
   syncPolicy:
     automated:
       prune: true
