--- a/bootstrap/argo-cd/kustomization.yaml
+++ b/bootstrap/argo-cd/kustomization.yaml
@@ -16,3 +16,11 @@ namespace: argocd
 resources:
 - github.com/argoproj-labs/argocd-autopilot/manifests/base?ref=v0.4.19
 - argocd-ingress.yaml
+patches:
+- patch: |-
+    - op: add
+      path: /spec/template/spec/containers/0/command/-
+      value: --insecure
+  target:
+    kind: Deployment
+    name: argocd-server
