patch: allow http and fix the route

--- a/apps/traefik/base/helmrelease.yaml
+++ b/apps/traefik/base/helmrelease.yaml
@@ -19,6 +19,8 @@ spec:
         ingressClass:
           enabled: true
           isDefaultClass: true
+        forwardedHeaders:
+          insecure: true
         logs:
           general:
             level: INFO
