--- a/bootstrap/argo-cd/argocd-ingress.yaml
+++ b/bootstrap/argo-cd/argocd-ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: argocd-ingress
   annotations:
     traefik.ingress.kubernetes.io/router.tls: "false"
+    traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   ingressClassName: traefik
   rules:
