--- a/apps/cloudflared/base/configmap.yaml
+++ b/apps/cloudflared/base/configmap.yaml
@@ -10,5 +10,5 @@ data:
     no-autoupdate: true
     ingress:
     - hostname: "*.bolacha.dev"
-      service: http://traefik.traefik.svc.cluster.local:80
+      service: http://traefik.kube-system.svc.cluster.local:80
     - service: http_status:404
