--- a/bootstrap/cluster-resources/patches/kustomization.yaml
+++ b/bootstrap/cluster-resources/patches/kustomization.yaml
@@ -1,12 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-patches:
-- patch: |-
-    - op: add
-      path: /spec/externalTrafficPolicy
-      value: Local
-  target:
-    kind: Service
+patchesStrategicMerge:
+- |-
+  apiVersion: v1
+  kind: Service
+  metadata:
     name: traefik
     namespace: kube-system
-    version: v1
+  spec:
+    externalTrafficPolicy: Local
