--- a/apps/cloudflared/base/configmap.yaml
+++ b/apps/cloudflared/base/configmap.yaml
@@ -11,4 +11,6 @@ data:
     ingress:
     - hostname: "*.bolacha.dev"
       service: http://traefik.kube-system.svc.cluster.local:80
+      originRequest:
+        noTLSVerify: true
     - service: http_status:404
