patch: fix the tunnel name

--- a/apps/cloudflared/base/configmap.yaml
+++ b/apps/cloudflared/base/configmap.yaml
@@ -10,7 +10,7 @@ data:
     no-autoupdate: true
     ingress:
     - hostname: "*.bolacha.dev"
-      service: http://traefik.kube-system.svc.cluster.local:80
+      service: https://traefik.kube-system.svc.cluster.local:443
       originRequest:
         noTLSVerify: true
     - service: http_status:404
