--- a/bootstrap/argo-cd/argocd-ingress.yaml
+++ b/bootstrap/argo-cd/argocd-ingress.yaml
@@ -6,6 +6,7 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls: "true"
 spec:
+  ingressClassName: traefik
   rules:
   - host: argocd.bolacha.dev
     http:
