patch: fix the tunnel name

--- a/bootstrap/argo-cd/kustomization.yaml
+++ b/bootstrap/argo-cd/kustomization.yaml
@@ -16,3 +16,8 @@ namespace: argocd
 resources:
 - github.com/argoproj-labs/argocd-autopilot/manifests/base?ref=v0.4.19
 - argocd-ingress.yaml
+patches:
+- path: patches/argocd-cmd-params-cm.yaml
+  target:
+    kind: ConfigMap
+    name: argocd-cmd-params-cm
